# Core

./: .gitmodules  CMakeLists.txt
include/: Base.hpp  Color.hpp  FileReader.hpp  FragmentShader.hpp  IndexBuffer.hpp  MinMax.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Uniform.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  VertexShader.hpp  Window.hpp
src/: Color.cpp  FileReader.cpp  FragmentShader.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Uniform.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexShader.cpp  Window.cpp
